--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,3 +21,16 @@
 	bottom: 0;
 	width: 100%;
 }
+
+.loader {
+	position: fixed;
+	top: 0;
+	left: 0;
+	height: 100%;
+	width: 100%;
+	overflow: visible;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: rgba(0, 0, 0, 0.2);
+}
