--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -30,6 +30,7 @@
 	width: 100%;
 	overflow: visible;
 	display: flex;
+	flex-direction: column;
 	justify-content: center;
 	align-items: center;
 	background-color: rgba(0, 0, 0, 0.2);
